--- a/client/style.css
+++ b/client/style.css
@@ -749,7 +749,7 @@ input {
     /*padding: 2em;*/
     /*padding-left: 1em;*/
 }
-.scrollng{
+.scrolling{
     max-height: 100vh !important;
     /*min-height: 50vh !important;*/
     /*border-radius: 7px !important;*/
