--- a/client/watson.jade
+++ b/client/watson.jade
@@ -402,7 +402,7 @@ template(name='tone')
                     |{{lowered text}}
                     // .content
                     // .header(title="#{sentence_id}") {{lowered text}}
-                    |#{weight}
+                    // |#{weight}
                     i.chevron.up.link.grey.icon.upvote_sentence
                     i.chevron.down.link.grey.icon.downvote_sentence
                     each tones
