fix people tags watson autoadd, fix icon template missing

--- a/client/client.jade
+++ b/client/client.jade
@@ -35,6 +35,10 @@ head
         gtag('config', 'G-GLYPPRGJFQ');
 
 
+template(name='icon')
+    i.icon(class=name)
+
+
 template(name='emoji')
     em(data-emoji=name)
 
