--- a/client/group.jade
+++ b/client/group.jade
@@ -2,6 +2,7 @@ template(name='group')
     .ui.stackable.grid
         .row 
             .sixteen.wide.column
+                .ui.inline.header #{counter}
                 .ui.inline.header    
                     |#{current_group}
                 .ui.icon.circular.basic.button.add_post
@@ -21,7 +22,7 @@ template(name='group')
                         +tag_selector
                 // else
                 //     i.big.grey.loading.yin.yang.icon
-            .four.wide.column.scrolling
+            .four.wide.center.aligned.column.scrolling
                 i.big.clock.grey.icon(title='when tags')
                 if picked_time_tags
                     each picked_time_tags
@@ -60,7 +61,7 @@ template(name='group')
                     a.ui.basic.large.label.zoomer.pick_people_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
                         strong #{name}
                 div
-                i.big.marker.grey.icon(title='where tags')
+                i.big.plus.grey.icon(title='where tags')
                 if picked_timestamp_tags
                     each picked_timestamp_tags
                         a.unpick_timestamp_tag.ui.active.large.compact.button(href='#')
@@ -78,41 +79,41 @@ template(name='group')
                     //     .item {{ to_percent avg_disgust_score}}% disgust
                     //     .item {{ to_percent avg_fear_score}}% fear
                     if kve 'doc_sentiment_label' 'positive'
-                        span.say.ui.green.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}% #{doc_sentiment_label}
+                        span.say.ui.green.text.invert(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}% #{doc_sentiment_label}
                             |&nbsp;
-                        div.rounded(style="height:5px;width:{{to_percent doc_sentiment_score}}%;background-color:green" title="{{to_percent doc_sentiment_score}}% #{doc_sentiment_label}")
+                        div.rounded.invert(style="height:5px;width:{{to_percent doc_sentiment_score}}%;background-color:green" title="{{to_percent doc_sentiment_score}}% #{doc_sentiment_label}")
                     else if kve 'doc_sentiment_label' 'negative'
-                        span.say.ui.red.text(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}%  #{doc_sentiment_label} 
+                        span.say.ui.red.text.invert(class="{{calculated_size doc_sentiment_score}}") {{ to_percent doc_sentiment_score }}%  #{doc_sentiment_label} 
                             |&nbsp;
-                        div.rounded(style="height:5px;width:{{abs_percent doc_sentiment_score}}%;background-color:red" title="{{abs_percent doc_sentiment_score}}% #{doc_sentiment_label}")
+                        div.rounded.invert(style="height:5px;width:{{abs_percent doc_sentiment_score}}%;background-color:red" title="{{abs_percent doc_sentiment_score}}% #{doc_sentiment_label}")
                         
-                    span.say.ui.green.text(class="{{calculated_size avg_sent_score}}") {{ to_percent avg_sent_score }}% joy 
+                    .ui.invert.inverted.header(class="{{calculated_size avg_sent_score}}") {{ to_percent avg_sent_score }}% sentiment
                         |&nbsp;
-                    div.rounded(style="height:5px;width:{{to_percent avg_sent_score}}%;background-color:green" title="{{to_percent avg_sent_score}}% joy")
+                    // div.rounded.invert(style="height:5px;width:{{to_percent avg_sent_score}}%;background-color:green" title="{{to_percent avg_sent_score}}% joy")
           
-                    span.say.ui.green.text(class="{{calculated_size avg_joy_score}}") {{ to_percent avg_joy_score }}% joy 
+                    span.say.ui.green.text.invert(class="{{calculated_size avg_joy_score}}") {{ to_percent avg_joy_score }}% joy 
                         |&nbsp;
-                    div.rounded(style="height:5px;width:{{to_percent avg_joy_score}}%;background-color:green" title="{{to_percent avg_joy_score}}% joy")
+                    div.rounded.invert(style="height:5px;width:{{to_percent avg_joy_score}}%;background-color:green" title="{{to_percent avg_joy_score}}% joy")
                     //- if above_50 'avg_sadness_score'
                         //- .spacer
-                    span.say.ui.blue.text(class="{{calculated_size avg_sadness_score}}") {{ to_percent avg_sadness_score}}% sad 
+                    span.say.ui.blue.text.invert(class="{{calculated_size avg_sadness_score}}") {{ to_percent avg_sadness_score}}% sad 
                         |&nbsp;
-                    div.rounded(style="height:5px;width:{{to_percent avg_sadness_score}}%;background-color:blue" title="{{to_percent avg_sadness_score}}% sad")
+                    div.rounded.invert(style="height:5px;width:{{to_percent avg_sadness_score}}%;background-color:blue" title="{{to_percent avg_sadness_score}}% sad")
                     //- if above_50 'avg_fear_score'
                         //- .spacer
-                    span.say.ui.grey.text(class="{{calculated_size avg_fear_score}}") {{ to_percent avg_fear_score }}% fear 
+                    span.say.ui.grey.text.invert(class="{{calculated_size avg_fear_score}}") {{ to_percent avg_fear_score }}% fear 
                         |&nbsp;
-                    div.rounded(style="height:5px;width:{{to_percent avg_fear_score}}%;background-color:grey" title="{{to_percent avg_fear_score}}% fear")
+                    div.rounded.invert(style="height:5px;width:{{to_percent avg_fear_score}}%;background-color:grey" title="{{to_percent avg_fear_score}}% fear")
                     //- if above_50 'avg_disgust_score'
                         //- .spacer
-                    span.say.ui.orange.text(class="{{calculated_size avg_disgust_score}}") {{ to_percent avg_disgust_score }}% disgust 
+                    span.say.ui.orange.text.invert(class="{{calculated_size avg_disgust_score}}") {{ to_percent avg_disgust_score }}% disgust 
                         |&nbsp;
-                    div.rounded(style="height:5px;width:{{to_percent avg_disgust_score}}%;background-color:orange" title="{{to_percent avg_disgust_score}}% disgust")
+                    div.rounded.invert(style="height:5px;width:{{to_percent avg_disgust_score}}%;background-color:orange" title="{{to_percent avg_disgust_score}}% disgust")
                     //- if above_50 'avg_anger_score'
                         //- .spacer
-                    span.say.ui.red.text(class="{{calculated_size avg_anger_score}}") {{ to_percent avg_anger_score }}% anger 
+                    span.say.ui.red.text.invert(class="{{calculated_size avg_anger_score}}") {{ to_percent avg_anger_score }}% anger 
                         |&nbsp;
-                    div.rounded(style="height:5px;width:{{to_percent avg_anger_score}}%;background-color:red" title="{{to_percent avg_anger_score}}% anger")
+                    div.rounded.invert(style="height:5px;width:{{to_percent avg_anger_score}}%;background-color:red" title="{{to_percent avg_anger_score}}% anger")
 
                 
             .twelve.wide.column
