add nav back and activerouter package

--- a/client/client.jade
+++ b/client/client.jade
@@ -44,7 +44,7 @@ template(name='emoji')
 
 template(name='layout')
     +status
-    // +nav
+    +nav
     +yield
     
     // .ui.bottom.attached.pushable.segment
