--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,22 +1,187 @@
 template(name='nav')
-    .ui.fluid.attached.borderless.three.item.menu
-        // a.icon.item.toggle_sidebar.no_blink
-        //     i.bars.icon
+    .ui.fluid.attached.borderless.inverted.menu.hscroll
+        a.icon.item.toggle_sidebar
+            i.bars.icon
     
-        a.ui.icon.item(href="/" class="{{isActiveRoute regex='home'}}")
+        a.icon.item.blink(href="/" class="{{isActiveRoute regex='home'}}")
+            i.globe.large.icon
+        // a.icon.item.blink.mobile.hidden(href="/stats" class="{{isActiveRoute 'stats'}}")
+        //     i.line.chart.large.icon
+        // .ui.dropdown.item
+        //     |drop
+        //     i.dropdown.icon
+        //     .menu
+        //         .item 111
+        //         .item 111
+        //         .item 111
+        //         .item 111
+        // a.icon.item.blink(href="/love" class="{{isActiveRoute 'love'}}")
+        //     i.heart.outline.large.icon
+        a.icon.item.mobile.hidden(href="/reddit" class="{{isActiveRoute 'reddit'}}")
             i.search.large.icon
-        // a.ui.icon.item.clear(href="/reddit" class="{{isActiveRoute 'reddit'}}")
-        //     i.search.icon
-        a.ui.icon.item(href="/subs" class="{{isActiveRoute regex='sub'}}")
+        a.icon.item.mobile.hidden(href="/subs" class="{{isActiveRoute 'subs'}}")
             i.fire.large.icon
-        // a.ui.icon.item.clear(href="/stack" class="{{isActiveRoute 'stack'}}")
-        //     i.stack.exchange.icon
-        a.ui.icon.item(href="/users" class="{{isActiveRoute regex='user'}}")
-            i.user.outline.large.icon
+        a.icon.item.mobile.hidden(href="/stack" class="{{isActiveRoute 'stack'}}")
+            i.stack.exchange.large.icon
+        a.icon.item.mobile.hidden(href="/map" class="{{isActiveRoute 'map'}}")
+            i.marker.large.icon
+        // a.icon.item.blink.go_shop.mobile.hidden(href="/shop" class="{{isActiveRoute 'shop'}}")
+        //     i.line.shop.large.icon
+        // a.icon.item.blink.go_shop.mobile.hidden(href="/bounties" class="{{isActiveRoute 'bounties'}}")
+        //     i.line.hand.holding.heart.large.icon
+        // if currentUser
+        a.icon.item.mobile.hidden(href="/people" class="{{isActiveRoute 'people'}}")
+            i.users.large.icon
+        a.icon.item.mobile.hidden(href="/posts" class="{{isActiveRoute regex='home'}}")
+            i.edit.large.icon
         // .item(title='session karma')
         //     i.grey.lightning.icon
         //     |#{session_clicks}
         // .item(title='global karma')
         //     i.grey.globe.icon
         //     |#{global_karma}
-        // +status
+        .item
+            +status
+    
+        // if is_dev 
+        //     .icon.item
+        //         i.code.icon
+        .right.menu
+            if currentUser
+                a.icon.item.add_post
+                    i.plus.icon
+            
+                if unread_count
+                    a.item.alerts.select_term(href="#" class=alert_toggle_class)
+                        i.bell.icon
+                        if unread_count
+                            |#{unread_count}
+                else
+                    a.icon.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
+                        i.outline.bell.icon
+                a.icon.item(href="/user/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
+                    i.inbox.icon
+                
+                a.icon.item.mobile.hidden(href="/user/#{currentUser.username}/received" class="{{isActivePath 'user_received'}}" title="#{user.username} received")
+                    strong #{currentUser.points}
+                a.item.mobile.hidden(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user'}}")
+                    if currentUser.profile_image_id
+                        if is_admin
+                            i.shield.icon(title='admin mode on')
+                        else
+                            img.ui.avatar.compact.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+                    else 
+                        i.user.icon
+                    strong.mobile.hidden #{currentUser.username}
+                a.icon.item.toggle_rightbar
+                    i.bars.icon
+            else
+                a.item(href="/register" title='login')
+                    |register
+                    i.user.plus.large.icon
+                a.item(href="/login" title='login')
+                    |login
+                    i.sign.in.icon
+
+
+template(name='topbar')
+    .ui.fluid.attached.segment
+        .ui.middle.aligned.divided.list
+            each recent_alerts
+                +recent_alert
+        a.ui.icon.attached.basic.button.item.close_topbar(href="/inbox")
+            i.inbox.icon
+            |inbox
+        
+template(name='recent_alert')        
+    .item.alert
+        .right.floated.content
+            i.eye.link.icon.mark_viewed(title='mark read')
+        img.ui.avatar.image(src="{{c.url author.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
+        .content
+            .header
+                |#{description} 
+            .description #{author.name} #{when}
+            
+            
+            
+            
+template(name='rightbar')
+    .ui.right.sidebar.vertical.borderless.inverted.menu
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/" class="{{isActiveRoute 'user_dashboard'}}")
+            | dashboard (#{currentUser.points}p)
+            i.dashboard.icon
+        
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/credits" class="{{isActiveRoute 'user_credits'}}")
+            | #{currentUser.total_credit_amount}p received
+            i.chevron.down.icon
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/posts" class="{{isActiveRoute 'user_posts'}}")
+            | #{currentUser.total_credit_amount} posts
+            i.newspaper.icon
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/comments" class="{{isActiveRoute 'user_comments'}}")
+            | #{currentUser.total_credit_amount} comments
+            i.comment.icon
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/tips" class="{{isActiveRoute 'user_tips'}}")
+            | #{_amount} tips
+            i.donate.icon
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/groups" class="{{isActiveRoute 'user_groups'}}")
+            | groups
+            i.fire.icon
+        a.ui.item.toggle_rightbar(href="/user/#{currentUser.username}/bounties" class="{{isActiveRoute 'user_bounties'}}" title="#{user.username} bounties")
+            i.hand.holding.icon
+            span bounties
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/friends" class="{{isActiveRoute 'user_friends'}}")
+            | friends
+            i.users.icon
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/sent" class="{{isActiveRoute 'user_sent'}}")
+            | #{currentUser.total_debit_amount}p sent
+            i.chevron.up.icon
+        .ui.divider
+        a.item.toggle_rightbar(href="/user/#{currentUser.username}/edit" title='edit your account')
+            i.cog.icon
+            |settings
+        // a.item.toggle_nightmode.toggle_rightbar(href="#")
+        //     i.lightbulb.icon
+        //     |dark mode
+        a.item.logout
+            |logout
+            if is_logging_out
+                i.refresh.loading.icon
+            else
+                i.sign.out.icon
+
+
+
+
+template(name='leftbar')
+    .ui.left.sidebar.vertical.borderless.inverted.menu
+        // a.item.toggle_sidebar(href="/" class="{{isActiveRoute '/'}}")
+        //     img.ui.avatar.compact.image(src="{{c.url 'one_logo' height=200 width=200 gravity='face' crop='fill'}}")
+        //     |One
+        // a.item.set_member.toggle_sidebar(href="/m/member" class="{{isActivePath 'm/member'}}" title='players')
+        a.item.toggle_sidebar(href="/users" class="{{isActivePath 'users'}}" title='users')
+            i.users.icon
+            | users
+        a.item.toggle_sidebar(href="/events" class="{{isActivePath '/events'}}")
+            i.calendar.icon
+            |events
+        // a.item.toggle_sidebar(href="/m/request" class="{{isActivePath '/m/request'}}")
+        //     i.concierge.bell.icon
+        //     |requests
+        // a.icon.item.blink.mobile.hidden.toggle_sidebar(href="/stats" class="{{isActiveRoute 'stats'}}")
+        //     i.line.chart.large.icon
+        //     |stats
+        // a.icon.item.blink.go_shop.mobile.hidden.toggle_sidebar(href="/shop" class="{{isActiveRoute 'shop'}}")
+        //     i.line.shop.large.icon
+        //     |shop
+        // a.icon.item.blink.go_shop.mobile.hidden.toggle_sidebar(href="/bounties" class="{{isActiveRoute 'bounties'}}")
+        //     i.line.hand.holding.heart.large.icon
+        //     |bounties
+        a.icon.item.mobile.hidden(href="/reddit" class="{{isActiveRoute 'reddit'}}")
+            i.search.large.icon
+        a.icon.item.mobile.hidden(href="/subs" class="{{isActiveRoute 'subs'}}")
+            i.fire.large.icon
+        a.icon.item.mobile.hidden(href="/stack" class="{{isActiveRoute 'stack'}}")
+            i.stack.exchange.large.icon
+        a.icon.item.mobile.hidden(href="/map" class="{{isActiveRoute 'map'}}")
+            i.marker.large.icon
