--- a/client/nav.jade
+++ b/client/nav.jade
@@ -76,11 +76,11 @@ template(name='nav')
                 a.icon.item.toggle_rightbar
                     i.bars.icon
             else
-                a.item(href="/register" title='login')
-                    |register
+                a.icon.item(href="/register" title='login')
+                    // |register
                     i.user.plus.large.icon
-                a.item(href="/login" title='login')
-                    |login
+                a.icon.item(href="/login" title='login')
+                    // |login
                     i.sign.in.icon
 
 
